@@ -159,6 +159,16 @@ static const libspectrum_word ZXSTZXCFF_UPLOAD = 1;
 
 #define ZXSTBID_ZXCFRAMPAGE "CFRP"
 
+#define ZXSTBID_PLUSD "PLSD"
+static const libspectrum_dword ZXSTPLUSDF_PAGED = 1;
+static const libspectrum_dword ZXSTPLUSDF_COMPRESSED = 2;
+static const libspectrum_dword ZXSTPLUSDF_SEEKLOWER = 4;
+static const libspectrum_byte ZXSTPDRT_GDOS = 0;
+static const libspectrum_byte ZXSTPDRT_UNIDOS = 1;
+static const libspectrum_byte ZXSTPDRT_CUSTOM = 2;
+
+#define ZXSTBID_PLUSDDISK "PDSK"
+
 static libspectrum_error
 read_chunk( libspectrum_snap *snap, libspectrum_word version,
 	    const libspectrum_byte **buffer, const libspectrum_byte *end );
@@ -208,6 +218,9 @@ write_scld_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
 static libspectrum_error
 write_b128_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
 		  size_t *length, libspectrum_snap *snap );
+static libspectrum_error
+write_plsd_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
+		  size_t *length, libspectrum_snap *snap, int compress  );
 static libspectrum_error
 write_zxat_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
 		  size_t *length, libspectrum_snap *snap );
@@ -376,6 +389,7 @@ read_b128_chunk( libspectrum_snap *snap, libspectrum_word version GCC_UNUSED,
   }
 
   flags = libspectrum_read_dword( buffer );
+  libspectrum_snap_set_beta_active( snap, 1 );
   libspectrum_snap_set_beta_paged( snap, flags & ZXSTBETAF_PAGED );
   libspectrum_snap_set_beta_direction( snap,
 				       !( flags & ZXSTBETAF_SEEKLOWER ) );
@@ -393,6 +407,194 @@ read_b128_chunk( libspectrum_snap *snap, libspectrum_word version GCC_UNUSED,
   return LIBSPECTRUM_ERROR_NONE;
 }
      
+static libspectrum_error
+read_plsd_chunk( libspectrum_snap *snap, libspectrum_word version GCC_UNUSED,
+		  const libspectrum_byte **buffer,
+		  const libspectrum_byte *end GCC_UNUSED, size_t data_length )
+{
+  libspectrum_error error;
+  libspectrum_byte *ram_data = NULL, *rom_data = NULL;
+  libspectrum_byte rom_type;
+  libspectrum_dword flags;
+  size_t disc_ram_length;
+  size_t disc_rom_length;
+  const size_t expected_length = 0x2000;
+
+  if( data_length < 19 ) {
+    libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			     "szx_read_plusd_chunk: length %lu too short",
+			     (unsigned long)data_length );
+    return LIBSPECTRUM_ERROR_UNKNOWN;
+  }
+
+  libspectrum_snap_set_plusd_active( snap, 1 );
+  flags = libspectrum_read_dword( buffer );
+  disc_ram_length = libspectrum_read_dword( buffer );
+  disc_rom_length = libspectrum_read_dword( buffer );
+  libspectrum_snap_set_plusd_paged( snap, flags & ZXSTPLUSDF_PAGED );
+  libspectrum_snap_set_plusd_direction( snap,
+				       !( flags & ZXSTPLUSDF_SEEKLOWER ) );
+
+  rom_type = *(*buffer)++;
+  libspectrum_snap_set_plusd_custom_rom( snap, rom_type == ZXSTPDRT_CUSTOM );
+  if( libspectrum_snap_plusd_custom_rom( snap ) && !disc_rom_length ) {
+    libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			     "szx_read_plusd_chunk: block flagged as custom "
+                             "ROM but there is no custom ROM stored in the "
+                             "snapshot" );
+    return LIBSPECTRUM_ERROR_UNKNOWN;
+  }
+
+  libspectrum_snap_set_plusd_control( snap, **buffer ); (*buffer)++;
+  (*buffer)++;		/* Skip the number of drives */
+  libspectrum_snap_set_plusd_track ( snap, **buffer ); (*buffer)++;
+  libspectrum_snap_set_plusd_sector( snap, **buffer ); (*buffer)++;
+  libspectrum_snap_set_plusd_data  ( snap, **buffer ); (*buffer)++;
+  libspectrum_snap_set_plusd_status( snap, **buffer ); (*buffer)++;
+
+  if( flags & ZXSTPLUSDF_COMPRESSED ) {
+
+#ifdef HAVE_ZLIB_H
+
+    size_t uncompressed_length;
+
+    if( !libspectrum_snap_plusd_custom_rom( snap ) &&
+         disc_rom_length != 0 ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			       "%s:read_plsd_chunk: invalid ROM length "
+                               "in compressed file, should be %lu, file "
+                               "has %lu",
+			       __FILE__, 
+                               0UL,
+                               (unsigned long)disc_rom_length );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    if( data_length < 19 + disc_ram_length + disc_rom_length ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			       "%s:read_plsd_chunk: length %lu too short, "
+			       "expected %lu" ,
+			       __FILE__, (unsigned long)data_length,
+			       (unsigned long)19 + disc_ram_length + disc_rom_length );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    error = libspectrum_zlib_inflate( *buffer, disc_ram_length, &ram_data,
+				      &uncompressed_length );
+    if( error ) return error;
+
+    if( uncompressed_length != expected_length ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			       "%s:read_plsd_chunk: invalid RAM length "
+                               "in compressed file, should be %lu, file "
+                               "has %lu",
+			       __FILE__, 
+                               expected_length,
+                               (unsigned long)uncompressed_length );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    *buffer += disc_ram_length;
+
+    if( libspectrum_snap_plusd_custom_rom( snap ) ) {
+      error = libspectrum_zlib_inflate( *buffer, disc_rom_length, &rom_data,
+                                        &uncompressed_length );
+      if( error ) return error;
+
+      if( uncompressed_length != expected_length ) {
+        libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+                                 "%s:read_plsd_chunk: invalid ROM length "
+                                 "in compressed file, should be %lu, file "
+                                 "has %lu",
+                                 __FILE__, 
+                                 expected_length,
+                                 (unsigned long)disc_rom_length );
+        return LIBSPECTRUM_ERROR_UNKNOWN;
+      }
+
+      *buffer += disc_rom_length;
+    }
+
+#else			/* #ifdef HAVE_ZLIB_H */
+
+    libspectrum_print_error(
+      LIBSPECTRUM_ERROR_UNKNOWN,
+      "%s:read_plsd_chunk: zlib needed for decompression\n",
+      __FILE__
+    );
+    return LIBSPECTRUM_ERROR_UNKNOWN;
+
+#endif			/* #ifdef HAVE_ZLIB_H */
+
+  } else {
+
+    if( disc_ram_length != expected_length ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			       "%s:read_plsd_chunk: invalid RAM length "
+                               "in uncompressed file, should be %lu, file "
+                               "has %lu",
+			       __FILE__, 
+                               expected_length,
+                               (unsigned long)disc_rom_length );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    if( (libspectrum_snap_plusd_custom_rom( snap ) &&
+         disc_rom_length != expected_length ) ||
+        (!libspectrum_snap_plusd_custom_rom( snap ) &&
+         disc_rom_length != 0 ) ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			       "%s:read_plsd_chunk: invalid ROM length "
+                               "in uncompressed file, should be %lu, file "
+                               "has %lu",
+			       __FILE__, 
+                               libspectrum_snap_plusd_custom_rom( snap ) ?
+                                 expected_length : 0UL,
+                               (unsigned long)disc_rom_length );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    if( data_length < 19 + disc_ram_length + disc_rom_length ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_UNKNOWN,
+			       "%s:read_plsd_chunk: length %lu too short, "
+			       "expected %lu" ,
+			       __FILE__, (unsigned long)data_length,
+			       (unsigned long)19 + disc_ram_length + disc_rom_length );
+      return LIBSPECTRUM_ERROR_UNKNOWN;
+    }
+
+    ram_data = malloc( expected_length );
+    if( !ram_data ) {
+      libspectrum_print_error( LIBSPECTRUM_ERROR_MEMORY,
+			       "%s:read_plsd_chunk: out of memory at %d",
+			       __FILE__, __LINE__ );
+      return LIBSPECTRUM_ERROR_MEMORY;
+    }
+
+    memcpy( ram_data, *buffer, expected_length );
+    *buffer += expected_length;
+
+    if( libspectrum_snap_plusd_custom_rom( snap ) ) {
+      rom_data = malloc( expected_length );
+      if( !rom_data ) {
+        libspectrum_print_error( LIBSPECTRUM_ERROR_MEMORY,
+                                 "%s:read_plsd_chunk: out of memory at %d",
+                                 __FILE__, __LINE__ );
+        return LIBSPECTRUM_ERROR_MEMORY;
+      }
+
+      memcpy( rom_data, *buffer, expected_length );
+      *buffer += expected_length;
+    }
+
+  }
+
+  libspectrum_snap_set_plusd_ram( snap, 0, ram_data );
+  libspectrum_snap_set_plusd_rom( snap, 0, rom_data );
+
+  return LIBSPECTRUM_ERROR_NONE;
+}
+
 static libspectrum_error
 read_cfrp_chunk( libspectrum_snap *snap, libspectrum_word version GCC_UNUSED,
 		 const libspectrum_byte **buffer,
@@ -899,6 +1101,8 @@ static struct read_chunk_t read_chunks[] = {
   { ZXSTBID_MOUSE,	    skip_chunk      },
   { ZXSTBID_MULTIFACE,	    skip_chunk      },
   { ZXSTBID_PLUS3DISK,	    skip_chunk      },
+  { ZXSTBID_PLUSD,	    read_plsd_chunk },
+  { ZXSTBID_PLUSDDISK,	    skip_chunk      },
   { ZXSTBID_RAMPAGE,	    read_ramp_chunk },
   { ZXSTBID_ROM,	    skip_chunk      },
   { ZXSTBID_SPECDRUM,	    skip_chunk      },
@@ -1183,6 +1387,11 @@ libspectrum_szx_write( libspectrum_byte **buffer, size_t *length,
         if( error ) return error;
       }
     }
+  }
+
+  if( libspectrum_snap_plusd_active( snap ) ) {
+    error = write_plsd_chunk( buffer, &ptr, length, snap, compress );
+    if( error ) return error;
   }
 
   /* Set length to be actual length, not allocated length */
@@ -1644,6 +1853,97 @@ write_b128_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
   *(*ptr)++ = libspectrum_snap_beta_sector( snap );
   *(*ptr)++ = libspectrum_snap_beta_data  ( snap );
   *(*ptr)++ = libspectrum_snap_beta_status( snap );
+
+  return LIBSPECTRUM_ERROR_NONE;
+}
+
+static libspectrum_error
+write_plsd_chunk( libspectrum_byte **buffer, libspectrum_byte **ptr,
+		  size_t *length, libspectrum_snap *snap, int compress  )
+{
+  libspectrum_error error;
+  libspectrum_byte *rom_data, *ram_data; 
+  libspectrum_byte *compressed_rom_data, *compressed_ram_data;
+  size_t disk_rom_length, disk_ram_length, block_size;
+  libspectrum_dword flags = 0;
+  int use_compression = 0;
+
+  rom_data = libspectrum_snap_plusd_rom( snap, 0 );
+  disk_rom_length = 0x2000;
+  ram_data = libspectrum_snap_plusd_ram( snap, 0 );
+  disk_ram_length = 0x2000;
+
+  compressed_ram_data = compressed_rom_data = NULL;
+
+  block_size = 0;
+
+#ifdef HAVE_ZLIB_H
+
+  if( compress ) {
+
+    size_t compressed_rom_length, compressed_ram_length;
+
+    error = libspectrum_zlib_compress( rom_data, disk_rom_length,
+				       &compressed_rom_data, &compressed_rom_length );
+    if( error ) return error;
+
+    error = libspectrum_zlib_compress( ram_data, disk_ram_length,
+				       &compressed_ram_data, &compressed_ram_length );
+    if( error ) {
+      if( compressed_rom_data ) free( compressed_rom_data );
+      return error;
+    }
+
+    if( compress & LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS ||
+        (compressed_rom_length + compressed_ram_length) <
+        (disk_rom_length + disk_ram_length ) ) {
+      use_compression = 1;
+      rom_data = compressed_rom_data;
+      disk_rom_length = compressed_rom_length;
+      ram_data = compressed_ram_data;
+      disk_ram_length = compressed_ram_length;
+    }
+
+  }
+
+#endif				/* #ifdef HAVE_ZLIB_H */
+
+  block_size = 19 + disk_ram_length;
+  if( libspectrum_snap_plusd_custom_rom( snap ) ) {
+    block_size += disk_rom_length;
+  }
+
+  error = write_chunk_header( buffer, ptr, length, ZXSTBID_PLUSD, block_size );
+  if( error ) return error;
+
+  if( libspectrum_snap_plusd_paged( snap ) ) flags |= ZXSTPLUSDF_PAGED;
+  if( use_compression ) flags |= ZXSTPLUSDF_COMPRESSED;
+  if( !libspectrum_snap_plusd_direction( snap ) ) flags |= ZXSTPLUSDF_SEEKLOWER;
+  libspectrum_write_dword( ptr, flags );
+
+  libspectrum_write_dword( ptr, disk_ram_length );
+  if( libspectrum_snap_plusd_custom_rom( snap ) ) {
+    libspectrum_write_dword( ptr, disk_rom_length );
+    *(*ptr)++ = ZXSTPDRT_CUSTOM;
+  } else {
+    libspectrum_write_dword( ptr, 0 );
+    *(*ptr)++ = ZXSTPDRT_GDOS;
+  }
+  *(*ptr)++ = libspectrum_snap_plusd_control( snap );
+  *(*ptr)++ = 2;	/* 2 drives connected */
+  *(*ptr)++ = libspectrum_snap_plusd_track  ( snap );
+  *(*ptr)++ = libspectrum_snap_plusd_sector ( snap );
+  *(*ptr)++ = libspectrum_snap_plusd_data   ( snap );
+  *(*ptr)++ = libspectrum_snap_plusd_status ( snap );
+
+  memcpy( *ptr, ram_data, disk_ram_length ); *ptr += disk_ram_length;
+
+  if( libspectrum_snap_plusd_custom_rom( snap ) ) {
+    memcpy( *ptr, rom_data, disk_rom_length ); *ptr += disk_rom_length;
+  }
+
+  if( compressed_rom_data ) free( compressed_rom_data );
+  if( compressed_ram_data ) free( compressed_ram_data );
 
   return LIBSPECTRUM_ERROR_NONE;
 }
